force-app/main/default/objects/Twitter_API_Setting__mdt/Twitter_API_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Twitter API Setting</label>
    <pluralLabel>Twitter API Settings</pluralLabel>
</CustomObject>