force-app/main/default/objects/Twitter_API_Setting__mdt/fields/APP_ID__c.field-meta.xml
<CustomField>
    <fullName>APP_ID__c</fullName>
    <label>APP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>