force-app/main/default/objects/Twitter_API_Setting__mdt/fields/OAuth_2_0_client_Id__c.field-meta.xml
<CustomField>
    <fullName>OAuth_2_0_client_Id__c</fullName>
    <label>OAuth 2.0 Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>